# streambinder

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  index.html  pyproject.toml  requirements.txt  solus.html
.github/: README.md  dependabot.yml
.github/linters/: .codespellrc  biome.json
.github/workflows/: bookbinder.yml  doc-sync.yml  erro-sync.yml  monk.yml  push.yml
.make/: config.py  docker.sh  dynimages.py  ext_html.py  ext_markdown.py  facade.py  jinja_parser.py  minify.sh  pages.py  parser.py  publish.sh  sitemap.py  url.py
assets/css/: ie9.css  main.css
assets/favicon/: manifest.json
docker/: lighttpd.conf
src/: browserconfig.xml  facade.html  facade.html.j2  index.html  website.yaml  website.yml
src/assets/: browserconfig.xml
src/assets/css/: ie8.css  main-var.css  main.css  pygments.css
src/assets/favicon/: manifest.json
src/pages/: 404.html  404.html.j2  500.html.j2  index.html  index.html.j2  music.html  project.html  project.html.j2  projects.html  projects.html.j2  resume.html  resume.html.j2  sig.html  sig.html.j2
src/projects/: ashtray.md  chopper.md  paperboy.md  resume.md  spotitube.md
src/static/: browserconfig.xml  robots.txt
src/static/css/: font.css  main-var.css  main.css  pygments.css
src/static/favicon/: manifest.json  site.webmanifest
zeus/: commands.yml
zeus/scripts/: _config.py  _globals.py  _html.py  _markdown.py  facade.py  minify.sh  pages.py  projects.py
