[project]
name = "streambinder"
version = "0.1.0"
description = "Static site generator for streambinder.github.io"
readme = ".github/README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "Jinja2",
  "Markdown",
  "PyYAML",
  "requests",
]

[dependency-groups]
dev = [
  "mypy",
  "types-Markdown",
  "types-PyYAML",
  "types-requests",
]

[tool.uv]
package = false

[tool.mypy]
strict = true
files = [".make"]
